--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (13).webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
             />
