--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (13).webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
