--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (14).webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
+              loading="eager"
             />
           </div>
           <div class="carousel-item">
