--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta
       name="title"
       content="
-      Nina Carducci photographe professionnel freelance exerçant sur Bordeaux"
+      Nina Carducci photographe professionnel exerçant sur Bordeaux"
     />
     <meta
       name="description"
@@ -371,15 +371,28 @@
             </p>
             <form action="" method="post">
               <label for="nom">Nom :</label>
-              <input type="text" name="nom" id="nom" required />
+              <input
+                type="text"
+                name="nom"
+                id="nom"
+                autocomplete="name"
+                required
+              />
               <label for="email">Email :</label>
-              <input type="email" name="email" id="email" required />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                autocomplete="email"
+                required
+              />
               <label for="message">Message :</label>
               <textarea
                 name="message"
                 id="message"
                 cols="30"
                 rows="10"
+                autocomplete="off"
                 required
               ></textarea>
               <input type="submit" value="Envoyer" />
