--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1) (1).webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               width="100%"
               height="auto"
               class="d-block w-100"
@@ -169,7 +169,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash (9).webp"
+              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="Public dans un concert"
             />
