--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
     rel="stylesheet" />
-  <link rel="preload" href="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (1) (1).webp" as="image" />
+  <link rel="preload" href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" as="image" />
 
   <link rel="stylesheet" href="./assets/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -98,11 +98,11 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="100%" height="auto"
+          <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="100%" height="auto"
             class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="eager" />
         </div>
         <div class="carousel-item">
-          <img src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
+          <img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
             alt="Public dans un concert" />
         </div>
         <div class="carousel-item">
@@ -159,24 +159,24 @@
             src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
             alt="portrait d'un homme qui pose en croisant les bras" />
           <img data-gallery-tag="Entreprises" class="gallery-item"
-            src="assets\images\gallery\entreprise\jason-goodman-tHO1_OuKbg0-unsplash.webp"
+            src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
             alt="femme qui rit à son bureau" />
           <img data-gallery-tag="Mariages" class="gallery-item"
-            src="assets\images\gallery\mariage\hannah-busing-RvF2R_qMpRk-unsplash.webp"
+            src="assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
             alt="photo de quatre mains qui se touchent" />
           <img data-gallery-tag="Portrait" class="gallery-item"
-            src="assets\images\gallery\portraits\ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+            src="assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
             alt="portrait d'un homme fermant les yeux" />
           <img data-gallery-tag="Mariages" class="gallery-item"
-            src="assets\images\gallery\mariage\jakob-owens-SiniLJkXhMc-unsplash.webp"
+            src="assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
             alt="photo de jeunes mariés qui marchent ensemble" />
           <img data-gallery-tag="Portrait" class="gallery-item"
-            src="assets\images\gallery\portraits\nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+            src="assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
             alt="photo d'une jeune femme posant prés d'un grillage" />
           <img data-gallery-tag="Concert" class="gallery-item"
-            src="assets\images\gallery\concerts\austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photo d'un chanteur" />
+            src="assets/images/gallery/concerts\austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photo d'un chanteur" />
           <img data-gallery-tag="Entreprises" class="gallery-item"
-            src="assets\images\gallery\entreprise\mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+            src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
             alt="photo d'une femme qui rit prés de son ordinateur" />
         </div>
       </div>
@@ -272,7 +272,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="assets\images\camera.webp" alt="photo d'un appareil photo" />
+          <img src="assets/images/camera.webp" alt="photo d'un appareil photo" />
         </div>
       </div>
     </section>
