--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="100%" height="auto"
-            class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="eager" />
+          <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
+            alt="Homme d'affaires marchant sur un passage piéton" loading="eager" />
         </div>
         <div class="carousel-item">
           <img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
