--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash (10).webp"
               class="d-block w-100"
               alt="Public dans un concert"
               width="1920"
