--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (18).webp"
+              src="assets\images\slider\ryoji-iwata-wUZjnOv7t0g-unsplash (19).webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               loading="eager"
@@ -167,21 +167,17 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\slider\nicholas-green-nPz8akkUmDI-unsplash (10).webp"
+              src="assets\images\slider\nicholas-green.webp"
               class="d-block w-100"
               alt="Public dans un concert"
-              width="1920"
-              height="888"
               loading="lazy"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+              src="assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
               alt="Couple de jeunes mariés qui s'embrassent en dansant"
-              width="1920"
-              height="888"
               loading="lazy"
             />
           </div>
@@ -213,7 +209,7 @@
       <section id="about">
         <div class="picture left">
           <img
-            src="assets\images\nina (5).webp"
+            src="assets\images\nina.webp"
             alt="portrait de Nina Carducci"
             width="426"
             height="425"
@@ -248,55 +244,55 @@
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
-              src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+              src="assets/images/gallery/concerts/aaron-paul.webp"
               alt="photo d'un concert"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+              src="assets/images/gallery/entreprise/ali-morshedlou.webp"
               alt="portrait d'un homme qui pose en croisant les bras"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+              src="assets/images/gallery/entreprise/jason-goodman.webp"
               alt="femme qui rit à son bureau"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
-              src="assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+              src="assets/images/gallery/mariage/hannah-busing.webp"
               alt="photo de quatre mains qui se touchent"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+              src="assets/images/gallery/portraits/ade-tunji.webp"
               alt="portrait d'un homme fermant les yeux"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
-              src="assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+              src="assets/images/gallery/mariage/jakob-owens.webp"
               alt="photo de jeunes mariés qui marchent ensemble"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+              src="assets/images/gallery/portraits/nino-van-prattenburg.webp"
               alt="photo d'une jeune femme posant prés d'un grillage"
             />
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
-              src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+              src="assets/images/gallery/concerts/austin-neill.webp"
               alt="photo d'un chanteur"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+              src="assets/images/gallery/entreprise/mateus-campos-felipe.webp"
               alt="photo d'une femme qui rit prés de son ordinateur"
             />
           </div>
