--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\slider\ryoji-iwata (1).webp"
+              src="assets\images\slider\ryoji-iwata.webp"
               class="d-block w-100"
               alt="Homme d'affaires marchant sur un passage piéton"
               style="width: 100%; height: auto"
